# ChAsm

./: .gitignore  LICENSE  README.md  make_examples.sh  pyproject.toml
chasm/: __init__.py  cli.py
docs/case_studies/001_hello_world/: 001_hello_world.md  text.md
docs/case_studies/002_basic_layers/: text.md
docs/case_studies/003_data_mods/: text.md
docs/isa/: list.md
examples/: examples.md
examples/data/: simple_bar.data.json  simple_multibar.data.json
examples/e1/: m1.chasm  make.sh
examples/e2/: l1.yaml  l2.yaml  m1.chasm  m2.chasm  make.sh
examples/e3/: l1.yaml  m1.chasm  make.sh
examples/e4/: m1.chasm  make.sh
examples/layers/: colors.yaml  minimal.yaml  multiseries_ykeys.yaml  remove_axis_titles.yaml  show_legend.yaml
examples/manipulators/: extend_random.chasm
examples/mods/: extend_random.chasm
